styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    /* font-family:Helvetica, sans-serif; */
}

*::before,
*::after {
    box-sizing: inherit;
}

:root {
    --mintcol: #54BA8F;
    --mintdark: #01A778;
}

html {
    scroll-behavior: smooth;
}

body {
    overflow-x: hidden;
}

main {
    display: flex;
    flex-direction: column;
}

a {
    text-decoration: none;
    color: inherit;
}

.pagedivider {
    height: 30vh;
    width: 100vw;
    background-color: #d9d9d9;
}

.navbar {
    display: flex;
    position: absolute;
    top: -100%;
    width: 100vw;
    height: 10vh;
    margin-top: 1%;
    animation: top-fall 1.2s ease-out 0.5s forwards;
    /* border: 3px solid black; */
}

.navbar a {
    transition: transform 0.3s ease-out;
    transition-property: transform;
    transition-duration: 0.3s;
    transition-timing-function: ease-out;
}

.navbar a:hover {
    transform: translateY(4px);
}

#nav-buttons {
    font-family: ksans;
    font-size: 1 rem;
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    /* border: 3px solid blue; */
}

#nav-buttons img {
    width: max(1.5vw, 3vh);
    height: auto;

}

.nav-button-wrapper {
    display: flex;
    align-items: flex-end;
    gap: 1rem;
    line-height: 1;
}


#nav-contact-icons {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    gap: 2rem;
    margin-right: 5%;

    /* border: 3px solid green; */
}

#nav-contact-icons img {
    width: max(1.75vw, 3.5vh);
}


.home {
    /* border: 2px solid red; */
    /* display:flex;
    flex-direction: column;
    align-items: center; */
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #D9D9D9;
    width: 100vw;
    height: 100vh;
    /* margin: auto; */
}

#welcome_wrapper {
    z-index: 1;
    /* border: 2px solid red; */
    font-family: ksans;
    display: flex;
    width: 90vw;
    margin-top: 5%;
    /* margin-top: 20%; */
    justify-content: space-evenly;
    animation: fadeIn 1.2s ease-out forwards;
}

.intro,
.portrait {
    flex: 1;
}


.intro {
    /* border: 2px solid blue; */
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.intro_name {
    font-family: ksansb;
    font-size: 3.5rem;
    margin-right: auto;
}

.intro_title {
    font-size: 0.85rem;
    margin: 1% auto 4% 0;
    white-space: pre;
}

#first_name_intro {
    color: #54BA8F;
}

.resume_button {
    margin-top: 3%;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 20px;
    padding: 1% 0 1% 0;
    color: white;
    font-size: 24px;
    font-family: ksans;
    border-radius: 15px;
    flex-direction: row;
    background-color: #54C796;
    width: 243px;
    height: 65px;
    white-space: nowrap;
    border: none;
    transition: background-color 0.5s ease;
}


.resume_button:hover {
    background-color: #39b37e;
}

.resume_button p {
    position: relative;
    top: 3px;
}

#dlicon_intro {
    height: auto;
    width: 16%;
}

.portrait {
    /* border: 2px solid blue; */
    display: flex;
    align-items: center;
    justify-content: center;
}

#portrait_backdrop {
    fill: rgb(183, 183, 183);
    position: absolute;
    border: 1px solid transparent;
    width: 69vh;
    height: 69vh;
    z-index: 2;
    clip-path: inset(1vh 0 1vh 0);
}

#dgrid-wrap {
    position: absolute;
    border-radius: 50%;
    overflow: hidden;
    width: 69vh;
    height: 69vh;
    z-index: 2;
}


#portrait_wrapper {
    z-index: 3;
    /* width: 55vh;
    height: 55vh;
    border: 5px solid black;
    overflow: hidden;
    position: relative; */
}

.portrait img {

    flex-shrink: 0;
    /* Prevent shrinking */
    flex-grow: 0;
    /* Prevent growing */
    width: 55vh;
    height: 55vh;
    border: 5px solid black;
    box-shadow: 0px 50px 50px rgba(0, 0, 0, 0.3);
    border-radius: 50%;
    overflow: hidden;
    /* display: flex;
    align-items: center;
    justify-content: center; */
}

.bounce_arrow img {
    position: absolute;
    bottom: 3%;
    /* Distance from the bottom */
    left: 50%;
    width: max(3vw, 5vh);
    height: auto;
    opacity: 0;
    /* transform: translateX(-50%); */
    animation: bounce 1.5s ease-in-out infinite 1s, fadeIn 1s ease-in-out 1.5s forwards;
    /* Animation definition */
}


.about {
    background-color: #D9D9D9;
    height: 100vh;
    width: 100vw;
    font-family: ksans;
}

.about-wrapper {
    opacity: 0;
    display: flex;
    /* border: 3px solid red; */
    width: 100vw;
    height: 100vh;
}

.about-wrapper.animate {
    animation: flyUpFadeIn 0.65s ease-out forwards;
}

.about-content,
.about-gallery {
    z-index: 2;
    /* border: 1px solid red; */
    flex: 1;

}

#dgrid-abt-wrapper-top {
    z-index: 0;
    position: absolute;
    width: 40%;
    height: 15%;
    top: 0;
    overflow: hidden;
}

#dgrid-abt-wrapper-bottom {
    z-index: 0;
    position: absolute;
    width: 40%;
    height: 15%;
    bottom: 2%;
    overflow: hidden;
}

.dgrid-abt {
    
    /* z-index: 0; */
    z-index: 0;
    width: 100%;
    fill: rgba(171, 171, 171, 0.509);
    clip-path: inset(1vh 0 1vh 0);
}


.about-content {
    z-index: 2;
    padding-left: 2%;
    /* border: 1px solid yellow; */
    margin: 8% 0 8% 0;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    /* gap: 10px; */

}

#about-intro {
    z-index: 2;
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    /* align-items: center; */
    width: 75%;
    /* border: 1px solid green; */
    font-family: ksans;
    font-size: 2.5rem;
    /* padding: 4%; */
    /* display: block; */
    /* margin: 2% 0 0 5%; */
}

#about-intro * {
    /* background-color: #d9d9d9; */
}



.ab_divider {
    z-index: 2;
    width: 45%;
    min-width: 200px;
    border: 2px solid var(--mintdark);
    
}
/* ... */

